add openapi spec, dto, pom